--- a/playbooks/updates.yml
+++ b/playbooks/updates.yml
@@ -9,7 +9,7 @@
       yum: name=* state=latest exclude=mysql*
 
     - name: install own version of 'needs-restarting'
-      copy: src=needs-restarting.py dest=/root/needs-restarting.py mode=0700
+      copy: src=files/needs-restarting.py dest=/root/needs-restarting.py mode=0700
 
     - name: Reboot required (Red Hat) - Step 1
       command: /root/needs-restarting.py -r
@@ -27,5 +27,5 @@
       when: reboot_required.rc == 1
 
 
-    - name: waiting for server to come back after reboot
-      local_action: wait_for host={{ inventory_hostname }} state=started port=22 delay=10 timeout=60
+#    - name: waiting for server to come back after reboot
+#      local_action: wait_for host={{ inventory_hostname }} state=started port=22 delay=10 timeout=60
