--- a/playbooks/bootstrap.yml
+++ b/playbooks/bootstrap.yml
@@ -13,8 +13,8 @@
 
     - name: Add my ansible user
       user:
-        name="{{ ansible_user }}"
-        password="{{ ansible_password }}"
+        name={{ ansible_user }}
+        password={{ ansible_password }}
         state=present  
       
 
