--- a/playbooks/updates.yml
+++ b/playbooks/updates.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: yes
   become_method: sudo
-  become_user: ansible_user
+  become_user: ansible
   connection: ssh
   gather_facts: no
 
