--- a/playbooks/bootstrap.yml
+++ b/playbooks/bootstrap.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: yes
   become_method: sudo
-  become_user: ansible
+  become_user: root
   connection: ssh
   gather_facts: no
   vars: # Hash512 created with: # python -c 'import crypt,getpass; print(crypt.crypt(getpass.getpass(), crypt.mksalt(crypt.METHOD_SHA512)))'
